--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- <a href="https://icons8.com/icon/39327/clouds">Clouds icon by Icons8</a> -->
     <meta charset="utf-8" />
-    <link rel="icon" href="https://img.icons8.com/office/16/000000/clouds.png" />
+    <link rel="icon" href="./img/nuvem.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="https://img.icons8.com/office/16/000000/clouds.png" />
+    <link rel="apple-touch-icon" href="./img/nuvem.svg" />
     <title>Weather app</title>
   </head>
   <body>
