adicionando novo card e retirando foco do campo search apos a pesquisa

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
-    <!-- <a href="https://icons8.com/icon/39327/clouds">Clouds icon by Icons8</a> -->
     <meta charset="utf-8" />
     <link rel="icon" href="./img/nuvem.svg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,3 +19,5 @@
     <div id="root"></div>
   </body>
 </html>
+
+<!-- https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap -->
